@@ -15,5 +15,6 @@ quelea (2016.1) stable; urgency=normal
   * Fix vlc arg option splitting for absolute paths on windows
   * Add presentation manager import
   * Fix Opensong import to recognise chords and section titles
+  * Fix missing required attributes for openlyrics export
 
- -- Michael Berry <michael@quelea.org>  Wednesday, 05 Mar 2016 00:00:00 +0000
+ -- Michael Berry <michael@quelea.org>  Sunday, 13 Mar 2016 00:00:00 +0000
